# itis-prog-006

./: .gitignore  Dockerfile  Readme.md  app.py  docker-compose.yml  models.py  pyproject.toml
flask_006/: db_schema.sql  flask_database.py  flaskapp.py  helpers.py  models.py
flask_006/admin/: admin.py  models.py
flask_006/admin/templates/admin/: admin_base.html  index.html  login.html  posts.html
flask_006/static/css/: style.css
flask_006/templates/: add_news.html  add_post.html  base.html  index.html  login.html  news.html  post.html  register.html  second.html
game/: main.py  space_battle.py
sockets/example1/: client.py  server.py
sockets/example2/: client.py  server.py
templates/: base.html  index.html
tests/: test_flask_006.py  test_with_class.py
